--- a/index.html
+++ b/index.html
@@ -29,14 +29,16 @@ https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js
     
           <div class="row m-0">
             <div class="col-md-6 d-flex align-items-center">
-              <h1 class="display-5 text-white">Com minha consultoria on-line você terá um programa 
-                de treino totalmente individualizado,de acordo com seu objetivo, 
-                disponibilidade e levando em conta todo seu histórico de treino.
+              <h1 class="display-center text-white text-responsive">Chega de adiar seus resultados!
+                Montei uma estrutura de treino 100% focada para atender o que você deseja:
+
+                  TRATAMENTO DE LESÕES, EMAGRECIMENTO OU HIPERTROFIA.
+
               </h1>
             </div>
             <div class="col-md-5">
                 <img src="img/robson medalha.png"
-                  alt="Robson segurando a medalha" class="img-fluid" width="550px">
+                  alt="Robson segurando a medalha" class="img-fluid" width="550px" >
               </div>
         
           </div>
