--- a/index.html
+++ b/index.html
@@ -72,12 +72,14 @@ https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js
             <!--imagem robson-->
             <!--<div class="col-md-6">
               <img src="img/robson medalha.png"
-                alt="Robson segurando a medalha" class="img-fluid" width="550px" >
+                alt="Robson segurando a medalha" class="img-fluid" width="550px" 
             </div>-->
+
             
+
             <!--botão-->
             <div class="d-grid gap-2 col-6 mx-auto mt-3">
-            <button class="btn btn-danger" type="button"><a href="https://www.mfitpersonal.com.br/index?share=MTQ1MjM2LzAvOS8w"></a>Cadastre-se</button>
+              <a href="https://www.mfitpersonal.com.br/index?share=MTQ1MjM2LzAvOS8w" class="btn btn-danger">Cadastre-se</a>
         
             </div>
        <!--div accordion-->
