--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@ https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js
         
             </div>
             <!--card listar grupos-->
-            <div class="card mt-3" style="width: 18rem;">
+            <div class="card mt-3 bg-danger">
               <div class="card-header">
-                NO MEU METODO DE TREINO VOCE VAI ENCONTRAR
+                <h6>NO MEU METODO DE TREINO VOCE VAI ENCONTRAR</h6>
               </div>
               <ul class="list-group list-group-flush">
                 <li class="list-group-item">Metodologia exclusiva de treinamento 
