:soon: estilização do cabeçalho

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js
         <!--Div cabeçalho-->
     <div class="container mt-5 pt-5 bg-dark text-center">
       <div class="card">
-        <div class="card-body fs-2">
+        <div class="card-body fs-2 bg-danger text-white">
           <h1>Chega de adiar seus resultados!</h1>
         </div>
       </div>
@@ -37,7 +37,7 @@ https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js
               <h5 class="display-center text-white text-responsive">
                 Montei uma estrutura de treino 100% focada para atender o que você deseja:
 
-                  TRATAMENTO DE LESÕES, EMAGRECIMENTO OU HIPERTROFIA.
+                TRATAMENTO DE LESÕES,EMAGRECIMENTO OU HIPERTROFIA
               </h5>
               <!--
               <div class="col-md-6 d-flex align-items-center">
@@ -83,7 +83,7 @@ https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js
             
 
             <!--botão-->
-            <div class="d-grid gap-2 col-6 mx-auto mt-3">
+            <div class="d-grid gap-2 col-6 mt-3 mx-auto">
               <a href="https://www.mfitpersonal.com.br/index?share=MTQ1MjM2LzAvOS8w" class="btn btn-danger">Cadastre-se</a>
         
             </div>
