:art: adicionando imagens no carrossel

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js
           <div class="row m-0 text-white text-responsive">
 
             <div class="col-md-6 d-flex align-items-center">
-              <h5 class="display-center text-white text-responsive">
+              <h5 class="display-center text-white text-responsive mt-2">
                 Montei uma estrutura de treino 100% focada para atender o que você deseja:
 
                 TRATAMENTO DE LESÕES,EMAGRECIMENTO OU HIPERTROFIA
@@ -58,16 +58,19 @@ https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js
                <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
                  <div class="carousel-inner">
                    <div class="carousel-item active">
-                    <img src="img/img 001.jpg" class="d-block w-100" alt="aluna01">
+                    <img src="img/on01.jpeg" class="d-block w-100" alt="aluna01">
                    </div>
                    <div class="carousel-item">
-                    <img src="img/img 0011.jpg" class="d-block w-100" alt="aluna01">
+                    <img src="img/on02.jpeg" class="d-block w-100" alt="aluna01">
                    </div>
                 <div class="carousel-item">
-                  <img src="img/img 002.jpg" class="d-block w-100" alt="aluna02">
+                  <img src="img/on03.jpeg" class="d-block w-100" alt="aluna02">
                 </div>
                 <div class="carousel-item">
-                  <img src="img/img 0022.jpg" class="d-block w-100" alt="resultado02">
+                  <img src="img/on04.jpeg" class="d-block w-100" alt="resultado02">
+                </div>
+                <div class="carousel-item">
+                  <img src="img/on05.jpeg" class="d-block w-100" alt="resultado02">
                 </div> 
               </div>
                 
@@ -89,7 +92,7 @@ https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js
             </div>
             <!--card listar grupos-->
             <div class="card mt-3 bg-danger">
-              <div class="card-header">
+              <div class="card-header text-white">
                 <h6>NO MEU METODO DE TREINO VOCE VAI ENCONTRAR</h6>
               </div>
               <ul class="list-group list-group-flush">
@@ -110,7 +113,24 @@ https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js
           <div class="col-lg-8 accordion accordion-flush" id="accordionFlushExample">
           <H1 class="text-secondary text-center pb-5 cursor-pointer">
             #TEAMDOGIGANTE</H1>
+         <!-- carrossel-->
+         <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+             <img src="img/img 001.jpg" class="d-block w-100" alt="aluna01">
+            </div>
+            <div class="carousel-item">
+             <img src="img/img 0011.jpg" class="d-block w-100" alt="aluna01">
+            </div>
+         <div class="carousel-item">
+           <img src="img/img 002.jpg" class="d-block w-100" alt="aluna02">
+         </div>
+         <div class="carousel-item">
+           <img src="img/img 0022.jpg" class="d-block w-100" alt="resultado02">
+         </div> 
+       </div>
          
+       </div>
      <!--DIV CARDS TEST--> 
      <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
