--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js
 
             <!--botão-->
             <div class="d-grid gap-2 col-6 mt-3 mx-auto">
-              <a href="https://www.mfitpersonal.com.br/index?share=MTQ1MjM2LzAvOS8w" class="btn btn-danger">Cadastre-se</a>
+              <a href="https://www.mfitpersonal.com.br/index?share=MTQ1MjM2LzAvOS8w" class="btn btn-success">Cadastre-se</a>
         
             </div>
             <!--card listar grupos-->
