:heavy_check_mark: adicionando div accordion

--- a/index.html
+++ b/index.html
@@ -194,19 +194,21 @@ https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js
           <!--div accordion-->
           <div class="row d-flex justify-content-center mx-0 my-5">
             <div class="col-lg-8 accordion accordion-flush" id="accordionFlushExample">
-              <H1 class="text-secondary text-center pb-5 cursor-pointer">
-                Perguntas Frequentes</H1>
+              <H1 class="text-white text-center pb-5 cursor-pointer">
+                A MINHA METODOLIGIA É DIVIDA EM TRÊS PARTES :</H1>
               <div class="accordion-item">
                 <h2 class="accordion-header" id="flush-headingThree">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                    Accordion Item #1
+                    1 - ANÁLISE:
                   </button>
                 </h2>
                 <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
                   data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
-                    <code>.accordion-flush</code> class. This is the first item's accordion body.
+                  <div class="accordion-body">O diagnostico, esse é o primeiro passo. Através desse questionário que vou saber 
+                    mais sobre você e montar um protocolo personalizado de treinamento. 
+                    Vou solicitar fotos com o objetivo de avaliar: 
+                    postura e encurtamento muscular e também acompanhar sua evolução.
                   </div>
                 </div>
               </div>
@@ -214,14 +216,15 @@ https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js
                 <h2 class="accordion-header" id="flush-headingThree">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                    Accordion Item #2
+                    2 - CONSTRUÇÃO:
                   </button>
                 </h2>
                 <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
                   data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
-                    <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being
-                    filled with some actual content.
+                  <div class="accordion-body">Irei criar um protocolo de treino com base PRINCIPALMENTE no seu OBJETIVO.
+                    Em até 3 dias úteis, após o envio dos dados das etapas anteriores, e montado o seu protocolo de treino.
+                     O envio é feito pelo App MFIT e nele conterá todos os seus treinos e avaliações.
+                    
                   </div>
                 </div>
               </div>
@@ -229,15 +232,18 @@ https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js
                 <h2 class="accordion-header" id="flush-headingThree">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                    Accordion Item #3
+                    3 - MANUTENÇÃO:
                   </button>
                 </h2>
                 <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
                   data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
-                    <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting
-                    happening here in terms of content, but just filling up the space to make it look, at least at first
-                    glance, a bit more representative of how this would look in a real-world application.
+                  <div class="accordion-body">A cada sexta-feira entrarei em contato para saber o feedback da semana. 
+                    Lembre-se que a consultoria on-line é uma via de mão dupla. Ela não consiste apenas em eu prescrever 
+                    o seu protocolo, mais sim, baseado nos seus feedbacks, ou seja, com sua participação, 
+                    irei adequando o protocolo durante o prazo de validade da consultoria.
+                    Por isso é de suma importância a sua participação ativa, me relatando quaisquer problemas em relação aos treinos.
+                    Com base no seu feedback seguimos com sua evolução e ajustes nos próximos protocolos.
+                    
                   </div>
                 </div>
               </div>
