--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js
     <div class="container mt-5 pt-5 bg-dark text-center">
       <div class="card">
         <div class="card-body fs-2 bg-danger text-white">
-          <h1>Chega de adiar seus resultados!</h1>
+          <h1>CHEGA DE ADIAR SEUS RESULTADOS!</h1>
         </div>
       </div>
           <div class="row m-0 text-white text-responsive">
@@ -95,7 +95,7 @@ https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js
               <div class="card-header text-white">
                 <h6>NO MEU METODO DE TREINO VOCE VAI ENCONTRAR</h6>
               </div>
-              <ul class="list-group list-group-flush">
+              <ul class="list-group list-group-flush fw-bolder">
                 <li class="list-group-item">Metodologia exclusiva de treinamento 
                   (orientada ao resultado desejado)</li>
                 <li class="list-group-item">Avaliação postural por fotos e vídeos</li>
@@ -194,11 +194,11 @@ https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js
           <!--div accordion-->
           <div class="row d-flex justify-content-center mx-0 my-5">
             <div class="col-lg-8 accordion accordion-flush" id="accordionFlushExample">
-              <H1 class="text-white text-center pb-5 cursor-pointer">
+              <H1 class="text-white text-center pb-1 cursor-pointer">
                 A MINHA METODOLIGIA É DIVIDA EM TRÊS PARTES :</H1>
-              <div class="accordion-item">
+              <div class="btn btn-outline-danger d-grid">
                 <h2 class="accordion-header" id="flush-headingThree">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  <button class="accordion-button collapsed fw-bolder" type="button" data-bs-toggle="collapse"
                     data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
                     1 - ANÁLISE:
                   </button>
@@ -212,9 +212,9 @@ https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js
                   </div>
                 </div>
               </div>
-              <div class="accordion-item">
+              <div class="btn btn-outline-danger d-grid">
                 <h2 class="accordion-header" id="flush-headingThree">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  <button class="accordion-button collapsed fw-bolder" type="button" data-bs-toggle="collapse"
                     data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
                     2 - CONSTRUÇÃO:
                   </button>
@@ -230,7 +230,7 @@ https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js
               </div>
               <div class="accordion-item">
                 <h2 class="accordion-header" id="flush-headingThree">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  <button class="accordion-button collapsed fw-bolder" type="button" data-bs-toggle="collapse"
                     data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
                     3 - MANUTENÇÃO:
                   </button>
