--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js
                   </div>
                 </div>
               </div>
-              <div class="accordion-item">
+              <div class="btn btn-outline-danger d-grid">
                 <h2 class="accordion-header" id="flush-headingThree">
                   <button class="accordion-button collapsed fw-bolder" type="button" data-bs-toggle="collapse"
                     data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
