:wrench: configuração nos botões

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
 
                 <DIV class="lh-base mt-3"><mark>DE LESÕES, EMAGRECIMENTO OU HIPERTROFIA</mark></DIV>
               </h5>
-                        <!--botão-->
-                        <div class="d-grid gap-2 col-6 mt-3 mx-auto">
+                        <!--botão 1-->
+                        <div class="d-grid gap-2">
           <a href="https://www.mfitpersonal.com.br/index?share=MTQ1MjM2LzAvOS8w" 
           class="btn btn-success"><h6>Cadastre-se</h6></a>
                         </div>
             </div>
                   <!-- carrossel 1-->
-               <div id="carouselExampleSlidesOnly" class="carousel slide mt-3" data-bs-ride="carousel" data-bs-interval="2300">
+               <div id="carouselExampleSlidesOnly" class="carousel slide mt-3 col-10 mx-auto" data-bs-ride="carousel" data-bs-interval="2300">
                  <div class="carousel-inner">
                    <div class="carousel-item active">
                     <img src="img/on01.jpeg" class="d-block w-100" alt="aluna01">
@@ -78,8 +78,8 @@
                   seu acompanhamento ainda mais assistido</li>
               </ul>
             </div>
-                        <!--botão-->
-                        <div class="d-grid gap-2 col-6 mt-3 mx-auto">
+                        <!--botão 2-->
+                        <div class="d-grid gap-2 mt-2">
                           <a href="https://www.mfitpersonal.com.br/index?share=MTQ1MjM2LzAvOS8w" 
                           class="btn btn-success"><h6>Cadastre-se</h6></a>
                         </div>
@@ -90,7 +90,7 @@
             AQUI ESTÃO ALGUNS RESULTADOS DOS MEUS ALUNOS!</H1>
 
          <!-- carrossel 2-->
-         <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2300">
+         <div id="carouselExampleSlidesOnly" class="carousel slide mt-3 col-8 mx-auto" data-bs-ride="carousel" data-bs-interval="2300">
           <div class="carousel-inner">
             <div class="carousel-item active">
              <img src="img/img 001.jpg" class="d-block w-100" alt="aluna01">
@@ -111,7 +111,7 @@
           <!--div accordion-->
           <div class="row d-flex justify-content-center mx-0 my-3">
             <div class="col-lg-8 accordion accordion-flush" id="accordionFlushExample">
-              <H1 class="text-white text-center pb-1 cursor-pointer">
+              <H1 class="text-white text-center pb-1">
                 A MINHA METODOLIGIA É DIVIDA EM TRÊS PARTES :</H1>
               <div class="btn btn-outline-danger d-grid">
                 <h2 class="accordion-header" id="flush-headingThree">
@@ -171,8 +171,8 @@
           </div>
     
             </div>
-                        <!--botão-->
-                        <div class="d-grid gap-2 col-6 mt-3 mx-auto">
+                        <!--botão 3-->
+                        <div class="d-grid gap-2">
           <a href="https://www.mfitpersonal.com.br/index?share=MTQ1MjM2LzAvOS8w" 
           class="btn btn-success"><h6>Cadastre-se</h6></a>
                         </div>
