--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     </header>
 
 
-    <main class="mt-2 pt-5 bg-dark text-center">
+    <main class="pt-5 bg-dark text-center">
         <!--Div cabeçalho-->
-      <div class="container mt-1 pt-5 bg-dark text-center btn-outline-danger">
-       <div class="card-body fs-3 bg-danger text-white">
+      <div class="container pt-4 bg-dark text-center btn-outline-danger">
+       <div class="card-body fs-3 bg-danger text-white rounded">
           <h1>CHEGA DE ADIAR SEUS RESULTADOS!</h1>        
        </div>
         <div class="row m-0 text-white text-responsive">
