--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"crossorigin="anonymous"></script> 
@@ -30,13 +29,21 @@
             <div class=" align-items-center">
               <h5 class="display-center text-white text-responsive mt-3 display-6">
                 Montei uma estrutura de treino 100% focada para atender o que você deseja:
-
                 <DIV class="lh-base mt-3"><mark>DE LESÕES, EMAGRECIMENTO OU HIPERTROFIA</mark></DIV>
               </h5>
+             <!-- imagens circulos -->
+             <div class="container">
+               <div class="d-flex flex-row col-4">
+                <img src="/img/lesao.jpg" alt="" class="rounded-circle">
+                <img src="/img/emagrecimento.jpg" alt="" class="rounded-circle">
+                <img src="/img/hipertrofia.webp" alt="" class="rounded-circle">
+               </div>
+             </div>
+               
                         <!--botão 1-->
                         <div class="d-grid gap-2">
-          <a href="https://www.mfitpersonal.com.br/index?share=MTQ1MjM2LzAvOS8w" 
-          class="btn btn-success"><h6>Cadastre-se</h6></a>
+                        <a href="https://www.mfitpersonal.com.br/index?share=MTQ1MjM2LzAvOS8w" 
+                           class="btn btn-success"><h6>Cadastre-se</h6></a>
                         </div>
             </div>
                   <!-- carrossel 1-->
@@ -180,5 +187,15 @@
         </div>
       </div>   
     </main>
+<!-- Rodapé fixo -->
+<footer class="footer fixed-bottom bg-dark text-white">
+  <div class="container">
+    <!--botão 1-->
+      <div class="d-grid gap-2">
+      <a href="https://www.mfitpersonal.com.br/index?share=MTQ1MjM2LzAvOS8w" 
+         class="btn btn-success"><h6>Cadastre-se</h6></a>
+      </div>
+  </div>
+</footer>
 </body>
 </html>
